fix: allow upload workspace query parameter
